--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,22 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'loganbickmore/rpmbuild'
+description: 'Build RPM packages'
+author: 'loganbickmore'
 inputs:
-  milliseconds: # change this
+  spec_file:
+    description: 'path to spec file'
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    default: '*.spec'
+  src_archive:
+    description: 'path to source archive file'
+    required: true
+outputs:
+  rpm_name:
+    description: 'name of rpm file, taken from path'
+  rpm_path:
+    description: 'path to rpm file'
+  rpm_content_type:
+    description: 'content-type of rpm file'
+
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+  using: 'docker'
+  image: 'Dockerfile'
