M  .github/workflows/test.yml A  Dockerfile M  action.yml D  dist/index.js D  dist/index.js.map D  dist/licenses.txt D  dist/sourcemap-register.js A  example/.rpm/build/SOURCES/hello-typescript.tar.gz A  example/.rpm/hello-typescript.spec A  example/Makefile A  example/README.md A  example/dist/main.js A  example/hello-typescript A  example/package-lock.json A  example/package.json A  example/src/main.ts A  example/tsconfig.json

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          milliseconds: 1000
+          spec_file: example/.rpm/hello-typsecript.spec
+          _topdir: example/.rpm/build
