M  action.yml A  dist/index.js A  dist/index.js.map A  dist/licenses.txt A  dist/sourcemap-register.js M  example/src/main.ts M  tsconfig.json

--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,9 @@ inputs:
     description: 'path to spec file'
     required: true
     default: '*.spec'
+  _topdir:
+    description: 'rpm top dir'
+    required: false
 
 runs:
   using: 'docker'
