--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-          npm install
-      - run: |
-          npm run build
-      - run: |
-          npm run format && npm run lint
+      - run: npm install
+      - run: npm run lint
+      - run: npm run build
 
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
