--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run lint
+      - run: npm run test
       - run: npm run build
 
   test: # make sure the action works on a clean machine without building
