--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,5 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: RPM binary
-          path: ${{ steps.rpm.outputs.rpm_path }}
+          # path: ${{ steps.rpm.outputs.rpm_path }}
+          path: example/.rpm/build/RPMS/**/*.rpm
