M  .github/workflows/test.yml M  lib/main.js M  src/main.ts ?? example/.rpm/build/BUILD/ ?? example/.rpm/build/RPMS/

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,5 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: RPM binary
-          # path: ${{ steps.rpm.outputs.rpm_path }}
+          name: ${{ steps.rpm.outputs.rpm_name }}
           path: example/.rpm/build/RPMS/**/*.rpm
