M  .github/workflows/release-example.yml ?? example/.rpm/build/BUILD/ ?? example/.rpm/build/RPMS/

--- a/.github/workflows/release-example.yml
+++ b/.github/workflows/release-example.yml
@@ -47,7 +47,7 @@ jobs:
           release_name: Actions Release ${{ github.ref }}
           body: |
             Title:
-            - ${{ join(github.event.commits[message]) }}
+            - ${{ join(github.event.commits.\*.message) }}
           draft: false
           prerelease: false
 
