--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,12 @@
-name: 'build-test'
-on: # rebuild any PRs and main branch changes
+name: 'Build and Test Action'
+on:
   pull_request:
   push:
     branches:
       - main
-      - 'releases/*'
 
 jobs:
-  build: # make sure build/ci work properly
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,26 +15,21 @@ jobs:
       - run: npm run test
       - run: npm run build
 
-  test: # make sure the action works on a clean machine without building
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
+      # Test action
       - uses: ./
-        id: rpm
+        id: rpm_build
         with:
           spec_file: example/.rpm/hello-typescript.spec
           _topdir: example/.rpm/build
-          # source_archive: example/.rpm/build/SOURCES/hello-typescript.tar.gz
 
+      # Upload artifact for inspection
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ steps.rpm.outputs.rpm_name }}
-          path: example/.rpm/build/RPMS/**/*.rpm
-
-      ##########################################################################
-      ##########################################################################
-      # NOTE: To move the rpm file to a release follow
-      # https://github.com/naveenrajm7/rpmbuild#the-above-release-uploads-srpm-like-
-      ##########################################################################
-      ##########################################################################
+          name: ${{ steps.rpm_build.outputs.rpm_name }}
+          path: example/.rpm/build/RPMS/noarch/${{ steps.rpm_build.outputs.rpm_name }}
+          # path: example/.rpm/build/RPMS/**/*.rpm
