M  .github/workflows/release-example.yml M  .github/workflows/test.yml ?? example/.rpm/build/BUILD/ ?? example/.rpm/build/RPMS/

--- a/.github/workflows/release-example.yml
+++ b/.github/workflows/release-example.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Build RPM
         uses: ./
         id: rpm_build
+        env:
+          TAG: ${{ github.ref }}
         with:
           spec_file: example/.rpm/hello-typescript.spec
           _topdir: example/.rpm/build
