M  .github/workflows/test.yml ?? example/.rpm/build/BUILD/ ?? example/.rpm/build/RPMS/

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           _topdir: example/.rpm/build
 
       # Echo Outputs
-      - run: echo ${{ toJSON(steps.rpm_build.outputs }}
+      - run: echo ${{ toJSON(steps.rpm_build.outputs) }}
 
       # Upload artifact for inspection
       - uses: actions/upload-artifact@v2
