M  .github/workflows/test.yml  M src/main.ts ?? example/.rpm/build/BUILD/ ?? example/.rpm/build/RPMS/

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           _topdir: example/.rpm/build
 
       # Echo Outputs
-      - run: echo '${{ toJSON(steps.rpm_build.outputs)' }}
+      - run: echo '${{ toJSON(steps.rpm_build.outputs) }}'
       - run: pwd
       - run: ls $(dirname ${{ steps.rpm_build.outputs.rpm_path }})
 
