removed topdir, inputs are now spec_file and src_archive

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - run: npm run test
       - run: npm run build
 
-  test-without-topdir:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,36 +25,11 @@ jobs:
         id: rpm_build
         with:
           spec_file: example/.rpm/hello-typescript.spec
-          # _topdir: example/.rpm/build
           src_archive: example/.rpm/build/SOURCES/hello-typescript.tar.gz
+          # _topdir: example/.rpm/build
 
       # Upload artifact for inspection
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.rpm_build.outputs.rpm_name }}
           path: ${{ steps.rpm_build.outputs.rpm_path }}
-
-test-with-topdir:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      # Test action
-      - uses: ./
-        id: rpm_build
-        with:
-          spec_file: example/.rpm/hello-typescript.spec
-          _topdir: example/.rpm/build
-
-      # Echo Outputs
-      - run: echo '${{ toJSON(steps.rpm_build.outputs) }}'
-      - run: pwd
-      - run: ls $(dirname ${{ steps.rpm_build.outputs.rpm_path }})
-
-      # Upload artifact for inspection
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ steps.rpm_build.outputs.rpm_name }}
-          path: ${{ steps.rpm_build.outputs.rpm_path }}
-          # path: example/.rpm/build/RPMS/noarch/${{ steps.rpm_build.outputs.rpm_name }}
-          # path: example/.rpm/build/RPMS/**/*.rpm
