M  .github/workflows/release-example.yml

--- a/.github/workflows/release-example.yml
+++ b/.github/workflows/release-example.yml
@@ -49,11 +49,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Actions Release ${{ github.ref }}
-          body: |
-            Title:
-            - ${{ join(github.event.commits.*.message) }}
-          draft: false
+          release_name: Release ${{ github.ref }}
+          draft: true
           prerelease: false
 
       #######################################
